docs: 补充 JDK 1.7 → 1.8 内存区域变化专题
- 变化总览表（方法区实现、字符串常量池、静态变量、OOM 错误信息）
- 永久代 → 元空间详解
- 字符串常量池和静态变量迁移说明
- OOM 错误信息变化示例
- 内存布局 ASCII 对比图
- 面试回答建议